jEdit 4.5 version history
       (changes since jEdit 4.4)
:encoding=UTF-8:

{{{ Version 4.5pre1

Thanks to Matthieu Casanova, cy6erGn0m, Bad Sector, jclopes, Dale Anson, Damien Radtke and Matthew Gilbert for contributing to
this release

{{{ API Changes
-New method TextArea.getVisibleLineText(screenLine) and
 TextArea.getVisibleLineSegment() that returns
 the visible part of the given line (Matthieu Casanova)

}}}
{{{ Editing

-Applied patch from Matthew Gilbert to add ability to increase/decrease line spacing in the text area. (#3023134, Dale Anson)

-Added jflex edit mode (Matthieu Casanova)

-Added "using" keyword to haXe edit mode (patch #3081482 from Bad Sector, Matthieu Casanova)

-Updated erlang mode and associated *.hrl to erlang language (patch #3042398 from jclopes , Matthieu Casanova)
}}}

{{{ Miscellaneous
-Added a new menu item "New Macro" in Macros menu (patch #2983607 from Damien Radtke, Matthieu Casanova)

-In search and replace when replacing by a beanshell snippet, it is now possible to use multiple statements instead of
 only one statement. To do that, enclose your code in braces (patch #3002207 from cy6erGn0m, Matthieu Casanova)
}}}
}}}

jEdit buffer local properties:
:folding=explicit:collapseFolds=2: